[package]
name = "carousel-model"
description = "Twitch API models for the carousel ecosystem."
version = "1.0.0"
authors = ["abstraq<abstraq@outlook.com>"]
edition = "2021"

[dependencies]
time = { version = "0.3", features = ["serde", "serde-well-known"] }
serde = { version = "1.0", features = ["derive"] }
